@@ -117,6 +117,9 @@ public class EditingOptionPane extends AbstractOptionPane
 		
 		addComponent(elasticTabstops = new JCheckBox(jEdit.getProperty(
 		"options.editing.elasticTabstops")));
+	
+		addComponent(autoIndent = new JCheckBox(jEdit.getProperty(
+			"options.editing.autoIndent")));
 
 		addComponent(deepIndent = new JCheckBox(jEdit.getProperty(
 			"options.editing.deepIndent")));
@@ -193,6 +196,7 @@ public class EditingOptionPane extends AbstractOptionPane
 	private JComboBox indentSize;
 	private JCheckBox noTabs;
 	private JCheckBox elasticTabstops;
+	private JCheckBox autoIndent;
 	private JCheckBox deepIndent;
 	//}}}
 
@@ -212,6 +216,7 @@ public class EditingOptionPane extends AbstractOptionPane
 		current.indentSize = (String)indentSize.getSelectedItem();
 		current.noTabs = noTabs.isSelected();
 		current.elasticTabstops = elasticTabstops.isSelected();
+		current.autoIndent = autoIndent.isSelected();
 		current.deepIndent = deepIndent.isSelected();
 	} //}}}
 
@@ -241,6 +246,7 @@ public class EditingOptionPane extends AbstractOptionPane
 		indentSize.setSelectedItem(current.indentSize);
 		noTabs.setSelected(current.noTabs);
 		elasticTabstops.setSelected(current.elasticTabstops);
+		autoIndent.setSelected(current.autoIndent);
 		deepIndent.setSelected(current.deepIndent);
 
 		updateEnabled();
@@ -277,6 +283,7 @@ public class EditingOptionPane extends AbstractOptionPane
 		indentSize.setEnabled(enabled);
 		noTabs.setEnabled(enabled);
 		elasticTabstops.setEnabled(enabled);
+		autoIndent.setEnabled(enabled);
 		deepIndent.setEnabled(enabled);
 	} //}}}
 
@@ -323,6 +330,7 @@ public class EditingOptionPane extends AbstractOptionPane
 		String indentSize;
 		boolean noTabs;
 		boolean elasticTabstops;
+		boolean autoIndent;
 		boolean deepIndent;
 		//}}}
 
@@ -363,6 +371,7 @@ public class EditingOptionPane extends AbstractOptionPane
 				indentSize = mode.getProperty("indentSize").toString();
 				noTabs = mode.getBooleanProperty("noTabs");
 				elasticTabstops = mode.getBooleanProperty("elasticTabstops");
+				autoIndent = mode.getBooleanProperty("autoIndent");
 				deepIndent = mode.getBooleanProperty("deepIndent");
 			}
 			else
@@ -377,6 +386,7 @@ public class EditingOptionPane extends AbstractOptionPane
 				indentSize = jEdit.getProperty("buffer.indentSize");
 				noTabs = jEdit.getBooleanProperty("buffer.noTabs");
 				elasticTabstops= jEdit.getBooleanProperty("buffer.elasticTabstops");
+				autoIndent = jEdit.getBooleanProperty("buffer.autoIndent");
 				deepIndent = jEdit.getBooleanProperty("buffer.deepIndent");
 			}
 		} //}}}
@@ -413,6 +423,7 @@ public class EditingOptionPane extends AbstractOptionPane
 					jEdit.resetProperty(prefix + "indentSize");
 					jEdit.resetProperty(prefix + "noTabs");
 					jEdit.resetProperty(prefix + "elasticTabstops");
+					jEdit.resetProperty(prefix + "autoIndent");
 					jEdit.resetProperty(prefix + "deepIndent");
 
 					if(!(StandardUtilities.objectsEqual(oldFilenameGlob,
@@ -454,6 +465,7 @@ public class EditingOptionPane extends AbstractOptionPane
 			jEdit.setProperty(prefix + "indentSize",indentSize);
 			jEdit.setBooleanProperty(prefix + "noTabs",noTabs);
 			jEdit.setBooleanProperty(prefix + "elasticTabstops",elasticTabstops);
+			jEdit.setBooleanProperty(prefix + "autoIndent",autoIndent);
 			jEdit.setBooleanProperty(prefix + "deepIndent",deepIndent);
 		} //}}}
 	} //}}}
